# dodo-assignment

./: .gitignore  Cargo.toml  README.md  diesel.toml  rust-toolchain.toml  rustfmt.toml
migrations/2024-10-11-073401_create_otps/: down.sql  up.sql
src/: constants.rs  db.rs  handler.rs  main.rs  models.rs  repo.rs  schema.rs  transaction_routes.rs  user_routes.rs
src/midware/: jwt.rs
src/tests/: fixtures.rs  integration_tests.rs  mod.rs  test_utils.rs  transaction_tests.rs  user_tests.rs
