[package]
name = "dodo-assignment"
version = "0.1.0"
edition = "2021"
authors=["Ravindar Singh<work.ravindar@gmail.com>"]

[dependencies]
log="0.4.19"
diesel = { version = "2.2.4", features = ["postgres","r2d2","numeric","chrono","time","uuid"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
diesel_migrations = "2.1.0"
argon2="0.5.2"
rand="0.8.4"
lettre="0.11.5"
jsonwebtoken = "9.2.0"
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
bytes = "1"
env_logger = "0.11"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dotenv = "0.15.0"
actix-web = "4.5.1"
actix-service = "2.0.2"
futures-util = "0.3.30"
sig = "1.0.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
num_cpus = "1.0"
tracing="0.1.37"
tracing-subscriber = "0.3.18"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
bcrypt = "0.15.0"
actix-rt = "2.5.0"
futures = "0.3"
actix-web-httpauth="0.8.0"
validator = { version = "0.20.0", features = ["derive"] }
bigdecimal = {version="0.4.8",features = ["serde"]}
uuid = { version = "1.17.0", features = ["v4", "serde"] }
mockall = "0.13.0"


[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dev-dependencies]
mockall = "0.13.0"
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }
actix-test = "0.1.0"

